--- a/fastmedical_front/estilo/dhtmlxlayout/dhtmlx_custom.css
+++ b/fastmedical_front/estilo/dhtmlxlayout/dhtmlx_custom.css
@@ -2,7 +2,7 @@
 								"DHX_SKYBLUE" SKIN
 *****************************************************************************************************************************************************************/
 body{
-	/*background-color: #001860;*/
+	background-color: #001860;
 }
 
 table.dhtmlxLayoutPolyContainer_dhx_skyblue td.dhtmlxLayoutSinglePoly div.dhtmlxWindowMainContent {
